Fix search placeholder from being cut off on medium to large screens (Closes GH-1760)

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -773,7 +773,7 @@ table.integrations {
   }
 
   .search-input {
-    padding: 8px 76px 8px 37px;
+    padding: 8px 24px 8px 37px;
     margin-top: -8px;
     font-size: 14px;
     background: #fff;
